# PyAnimals

./: pyproject.toml
PyAnimals/: License.md  README.md  pyproject.toml
PyAnimals/pyanimals/: __init__.py
PyAnimals/tests/: test_pyanimals.py
