[tool.poetry]
name = "PyAnimals"
version = "0.1.3"
description = "Get animal images and facts with easy plug-and-play syntax!"
authors = ["Cesiyi, ksIsCute"]
license = "MIT"
readme = "PyAnimals/README.md"
repository = ""

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"