[tool.poetry]
name = "PyAnimals"
version = "0.1.4"
description = "Puthon wrapper for some-random-api.ml that can get animal images and facts with easy plug-and-play syntax!"
authors = ["ksIsCute, Cesiyi"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
